--- a/src/components/AutorSlider/styles.css
+++ b/src/components/AutorSlider/styles.css
@@ -1,90 +1,67 @@
-/* Estilos generales */
 html,
 body {
   height: 100%;
   margin: 0;
-  box-sizing: border-box;
+  padding: 0;
 }
 
 body {
-  font-family: "Arial", sans-serif;
-  background-color: #f5f5f5;
-  color: #333;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  background-color: #1e1e1e;
+  font-family: Helvetica Neue, Helvetica;
+  font-size: 14px;
+
+  text-align: center;
 }
-/* Contenedor principal para ocupar toda la altura */
+.slider {
+}
 .main-container {
-  min-height: 100vh; /* Asegura que el contenedor ocupe al menos el 100% de la altura de la ventana */
-  display: flex;
-  flex-direction: column; /* Aplica el diseño de columna */
-}
-/* Estilo del contenido principal */
-.content {
-  flex: 1; /* Hace que el contenido ocupe el espacio disponible */
-}
-/* Slider */
-.swiper-container {
-  width: 100%;
+  /*   border: 9px solid black; */
+  overflow: hidden;
   height: 90vh;
-  margin: 10px 0;
   background-color: #f5f5f5; /* Color de fondo temporal */
   background-image: url("../../assets/fondo.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
-.swiper-wrapper {
-  padding: 28px;
+
+.swiper {
+  width: 100%;
+  padding: 150px 0 50px 0;
 }
-.swiper-slide {
-  /*   border: 1px solid black; */
+/* .swiper-wrapper div {
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+.swiper-slide {
+  width: 500px;
+  height: 430px;
+  background-color: #323232;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+  /*   padding: 5px; */
   text-align: center;
-  width: 80%;
-  height: auto;
+
   margin: 0 auto;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 1.3);
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.9);
   transition: transform 0.3s ease-in-out;
-  height: 600px;
 }
-
-.swiper-slide-active {
-  transform: scale(1.05);
-}
-
 .slide-content {
-  padding: 20px;
+  padding: 5px;
+  height: 100%;
 }
-
-.autor-image {
-  margin-bottom: 20px;
-}
-
-.autor-img {
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
-  border: 2px solid #ddd;
-}
-
+/* detalles autor */
 .author-details {
   text-align: left;
 }
-
 .author-name {
   margin-bottom: 10px;
 }
 
 .author-name h1 {
-  margin: 0;
-  font-size: 1.2rem;
+  font-size: 0.5rem;
   color: #333;
   font-weight: bold;
 }
@@ -102,6 +79,11 @@ body {
 .detalles-autor .citas {
   font-size: 12px;
 }
+.detalles-autor .citas .numero-citas {
+  font-size: 2rem;
+  color: #007bff;
+  font-weight: bold;
+}
 .detalles-autor .citas h1 {
   font-size: 12px;
 }
@@ -115,28 +97,43 @@ body {
   margin: 0;
   color: #777;
 }
-
-.chart-container {
-  width: 100%;
-  height: 200px;
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
+/*****************************/
+.autor-img {
+  height: 100px;
 }
 
+.btn-1 {
+  display: inline-block;
+  padding: 13px 55px;
+  border: 1px solid #ffb900;
+  border-radius: 25px;
+  color: #ffb900;
+  text-decoration: none;
+  margin-top: 50px;
+}
+
+/********* footer ********/
 /* Footer */
 .footer {
   background: #ffffff;
   padding: 18px 0;
-  margin-top: 20px;
-  height: 150px;
-  position: relative;
-  top: -107px;
+  /* margin-top: 20px; */
+  height: 10vh;
+  /* position: relative; */
 }
 
 .footer .container {
   width: 100%;
   margin: 0 auto;
+}
+.footer .row {
+}
+
+.footer .logo-uch,
+.footer .logo-laboratorio .col {
+}
+.footer .logo-uch img,
+.footer .logo-laboratorio img {
 }
 .footer .logo-uch {
   width: 100%;
@@ -155,7 +152,7 @@ body {
   width: 100%;
   margin: 0 auto;
   display: flex;
-  height: 40px;
+  height: 20px;
 }
 .footer .logo-laboratorio img {
   max-width: 50%;
@@ -164,19 +161,73 @@ body {
   display: flex;
   justify-content: center;
 }
-@media (max-width: 425px) {
-  .footer .logo-uch img {
-    width: 100%;
-  }
-}
-/* Contenedor de los grados académicos */
-.academic-degrees {
-  line-height: 1.5; /* Ajusta la altura de línea para reducir el espaciado */
-}
 
-/* Estilo para los grados académicos */
-.academic-degrees h5 {
-  margin: 0; /* Elimina el margen por defecto para reducir el espaciado entre los elementos */
-  font-size: 0.5rem; /* Ajusta el tamaño de fuente según sea necesario */
-  color: #555; /* Ajusta el color si es necesario */
+/* Media query para pantallas pequeñas */
+@media (max-width: 425px) {
+  .swiper-slide {
+    width: 94%;
+    /* padding: 10px; */
+    height: 88vh;
+    margin-top: 10px;
+  }
+  .swiper {
+    padding: 10px 0;
+  }
+  .autor-img {
+    height: 130px;
+    width: 108px;
+    margin: 20px 0;
+    /* background: red; */
+    object-fit: cover;
+  }
+  .author-name h1 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+  }
+  .slide-content .autor-image {
+    height: 20%;
+  }
+  .slide-content .author-details {
+    height: 46%;
+    padding: 5px;
+  }
+  .slide-content .chart-container {
+    height: 33%;
+  }
+  /* detalles autor */
+  .author-details h5 {
+    font-size: 1rem;
+  }
+  .detalles-autor .citas h1 {
+    font-size: 1rem;
+  }
+  .detalles-autor .documentos h1 {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+  .detalles-autor .citas {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+  .detalles-autor .documentos {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+  .footer {
+    background: #ffffff;
+    padding: 18px 0;
+    /* margin-top: 20px; */
+    height: 10vh;
+    /* position: relative; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 30px;
+  }
+  .footer .logo-laboratorio img {
+    max-width: 100%;
+    height: 20px;
+  }
+  /*****************************/
 }
