--- a/src/components/AutorSlider/styles.css
+++ b/src/components/AutorSlider/styles.css
@@ -6,7 +6,6 @@ body {
 }
 
 body {
-  background-color: #1e1e1e;
   font-family: Helvetica Neue, Helvetica;
   font-size: 14px;
 
@@ -98,8 +97,13 @@ body {
   color: #777;
 }
 /*****************************/
+
 .autor-img {
+  border-radius: 50%;
+  width: 150px;
   height: 100px;
+  object-fit: cover;
+  border: 2px solid #ddd;
 }
 
 .btn-1 {
