--- a/src/components/AutorSlider/styles.css
+++ b/src/components/AutorSlider/styles.css
@@ -12,11 +12,13 @@ body {
   text-align: center;
 }
 .slider {
+  width: 100%;
+  height: 100vh;
 }
 .main-container {
   /*   border: 9px solid black; */
   overflow: hidden;
-  height: 90vh;
+  height: 95vh;
   background-color: #f5f5f5; /* Color de fondo temporal */
   background-image: url("../../assets/fondo.png");
   background-size: cover;
@@ -79,7 +81,7 @@ body {
   font-size: 12px;
 }
 .detalles-autor .citas .numero-citas {
-  font-size: 2rem;
+  font-size: 1rem;
   color: #007bff;
   font-weight: bold;
 }
@@ -122,7 +124,7 @@ body {
   background: #ffffff;
   padding: 18px 0;
   /* margin-top: 20px; */
-  height: 10vh;
+  height: 5vh;
   /* position: relative; */
 }
 
@@ -167,11 +169,11 @@ body {
 }
 
 /* Media query para pantallas pequeñas */
-@media (max-width: 425px) {
+@media (max-width: 600px) {
   .swiper-slide {
     width: 94%;
     /* padding: 10px; */
-    height: 88vh;
+    height: 93vh;
     margin-top: 10px;
   }
   .swiper {
@@ -193,15 +195,15 @@ body {
     height: 20%;
   }
   .slide-content .author-details {
-    height: 46%;
+    height: 55%;
     padding: 5px;
   }
   .slide-content .chart-container {
-    height: 33%;
+    height: 25%;
   }
   /* detalles autor */
   .author-details h5 {
-    font-size: 1rem;
+    font-size: 0.6rem;
   }
   .detalles-autor .citas h1 {
     font-size: 1rem;
@@ -222,7 +224,7 @@ body {
     background: #ffffff;
     padding: 18px 0;
     /* margin-top: 20px; */
-    height: 10vh;
+    height: 5vh;
     /* position: relative; */
     display: flex;
     align-items: center;
