--- a/src/components/Dashboard/styles.css
+++ b/src/components/Dashboard/styles.css
@@ -34,6 +34,7 @@ body {
 }
 .navbar-custom .navbar-brand {
   color: #fff;
+  margin: 0 auto;
 }
 .navbar-custom .navbar-brand:hover {
   color: #ddd;
