--- a/src/components/AutorSlider/styles copy.css
+++ b/src/components/AutorSlider/styles copy.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-  font-family: "Arial", sans-serif;
+  font-family: 'Roboto Slab','Merriweather', 'Libre Baskerville', 'Lora', 'Playfair Display',  serif;
   background-color: #f5f5f5;
   color: #333;
   margin: 0;
