--- a/src/components/AutorSlider/styles.css
+++ b/src/components/AutorSlider/styles.css
@@ -1,25 +1,25 @@
-html,
+/* html,
 body {
+  font-family: 'Roboto Slab','Merriweather', 'Libre Baskerville', 'Lora', 'Playfair Display', serif;
   height: 100%;
   margin: 0;
   padding: 0;
-}
+} */
 
 body {
-  font-family: Helvetica Neue, Helvetica;
   font-size: 14px;
-
   text-align: center;
 }
+
 .slider {
   width: 100%;
   height: 100vh;
 }
+
 .main-container {
-  /*   border: 9px solid black; */
   overflow: hidden;
   height: 95vh;
-  background-color: #f5f5f5; /* Color de fondo temporal */
+  background-color: #f5f5f5;
   background-image: url("../../assets/fondo.png");
   background-size: cover;
   background-position: center;
@@ -28,43 +28,54 @@ body {
 
 .swiper {
   width: 100%;
-  padding: 150px 0 50px 0;
+  padding: 10% 0 5% 0;
 }
-/* .swiper-wrapper div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-} */
+.swiper-wrapper{
+  margin: 10px auto;
+}
 .swiper-slide {
-  width: 500px;
-  height: 430px;
-  background-color: #323232;
+  width: 80%;
+  min-width: 500px;
+  height: 92vh;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-  /*   padding: 5px; */
   text-align: center;
-
   margin: 0 auto;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 1.3);
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.9);
   transition: transform 0.3s ease-in-out;
 }
+
 .slide-content {
   padding: 5px;
   height: 100%;
+
+  position: relative;
+}
+.slide-content .chart-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 /* detalles autor */
 .author-details {
   text-align: left;
 }
+
 .author-name {
   margin-bottom: 10px;
 }
 
 .author-name h1 {
-  font-size: 0.5rem;
+  margin-top: 10px;
+  font-size: 1rem;
   color: #333;
   font-weight: bold;
+  text-align: center;
+}
+.academic-degrees h5{
+  font-size: 0.6rem;
+  padding: 7px;
 }
 
 .detalles-autor {
@@ -77,33 +88,40 @@ body {
 .detalles-autor div {
   text-align: center;
 }
+
 .detalles-autor .citas {
-  font-size: 12px;
+  font-size: 1rem;
+  font-weight: 600;
 }
+
 .detalles-autor .citas .numero-citas {
+  font-size: 1.2rem;
+  color: #007bff;
+  font-weight: bold;
+}
+
+.detalles-autor .citas h1 {
+  font-size: 1rem;
+}
+
+.detalles-autor .documentos {
   font-size: 1rem;
   color: #007bff;
   font-weight: bold;
 }
-.detalles-autor .citas h1 {
-  font-size: 12px;
+.detalles-autor .documentos h1{
+font-size: 2rem;
+font-weight: bold;
 }
-.detalles-autor .documentos {
-  font-size: 1.25rem;
-  color: #007bff;
-  font-weight: bold;
-}
-
 .detalles-autor p {
   margin: 0;
   color: #777;
 }
-/*****************************/
 
 .autor-img {
   border-radius: 50%;
   width: 150px;
-  height: 100px;
+  height: 150px;
   object-fit: cover;
   border: 2px solid #ddd;
 }
@@ -119,50 +137,58 @@ body {
 }
 
 /********* footer ********/
-/* Footer */
 .footer {
   background: #ffffff;
   padding: 18px 0;
-  /* margin-top: 20px; */
   height: 5vh;
-  /* position: relative; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer .container {
   width: 100%;
   margin: 0 auto;
 }
+
 .footer .row {
 }
 
 .footer .logo-uch,
 .footer .logo-laboratorio .col {
 }
+
 .footer .logo-uch img,
 .footer .logo-laboratorio img {
 }
+
 .footer .logo-uch {
   width: 100%;
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
 }
+
 .footer .logo-uch img {
   width: 30%;
 }
+
 .footer .logo-uch div {
   display: flex;
   justify-content: center;
 }
+
 .footer .logo-laboratorio {
   width: 100%;
   margin: 0 auto;
   display: flex;
   height: 20px;
 }
+
 .footer .logo-laboratorio img {
   max-width: 50%;
 }
+
 .footer .logo-laboratorio div {
   display: flex;
   justify-content: center;
@@ -170,9 +196,11 @@ body {
 
 /* Media query para pantallas pequeñas */
 @media (max-width: 600px) {
+  .swiper-wrapper{
+    margin: 0px;
+  }
   .swiper-slide {
     width: 94%;
-    /* padding: 10px; */
     height: 93vh;
     margin-top: 10px;
   }
@@ -183,7 +211,6 @@ body {
     height: 130px;
     width: 108px;
     margin: 20px 0;
-    /* background: red; */
     object-fit: cover;
   }
   .author-name h1 {
@@ -201,7 +228,6 @@ body {
   .slide-content .chart-container {
     height: 25%;
   }
-  /* detalles autor */
   .author-details h5 {
     font-size: 0.6rem;
   }
@@ -223,9 +249,7 @@ body {
   .footer {
     background: #ffffff;
     padding: 18px 0;
-    /* margin-top: 20px; */
     height: 5vh;
-    /* position: relative; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -235,5 +259,4 @@ body {
     max-width: 100%;
     height: 20px;
   }
-  /*****************************/
 }
