--- a/src/components/Dashboard/styles.css
+++ b/src/components/Dashboard/styles.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
 
 #totales {
   display: flex;
@@ -55,11 +51,15 @@ body {
 }
 .chart-container {
   position: relative;
-  height: 400px; /* Altura del contenedor de gráficos */
+  height: 205px; /* Altura del contenedor de gráficos */
   width: 100%;
 }
 #charts {
   height: 100%; /* Asegura que el contenedor de gráficos ocupe todo el espacio */
+}
+
+.dropdown-menu {
+  z-index: 1001;
 }
 @media (max-width: 600px) {
   #sidebar {
@@ -93,6 +93,9 @@ body {
   }
 }
 @media (min-width: 601px) {
+  .navbar-collapse {
+    visibility: hidden;
+  }
   #sidebar {
     width: 250px;
     background-color: #343a40;
@@ -127,6 +130,4 @@ body {
     display: none;
   }
 }
-.dropdown-menu {
-  z-index: 1001;
-}
+
