--- a/src/components/Dashboard/styles.css
+++ b/src/components/Dashboard/styles.css
@@ -93,9 +93,10 @@
   }
 }
 @media (min-width: 601px) {
-  .navbar-collapse {
+  .navbar-expand-lg .navbar-collapse {
     visibility: hidden;
-  }
+    display: none !important;
+}
   #sidebar {
     width: 250px;
     background-color: #343a40;
