--- a/src/components/AutorSlider/styles.css
+++ b/src/components/AutorSlider/styles.css
@@ -14,12 +14,12 @@ body {
 
 .slider {
   width: 100%;
-  height: 100vh;
+  height: 880px; /* Altura máxima establecida */
 }
 
 .main-container {
   overflow: hidden;
-  height: 95vh;
+  /* height: 800px; */
   background-color: #f5f5f5;
   background-image: url("../../assets/fondo.png");
   background-size: cover;
@@ -38,7 +38,7 @@ body {
 
 .swiper-slide {
   width: 80%;
-  height: 92vh;
+  height: 80vh; /* Ajustado para mantener proporción */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 1.3);
   text-align: center;
   margin: 0 auto;
@@ -49,7 +49,7 @@ body {
 
 .slide-content {
   padding: 5px;
-  height: 100%;
+  height: 800px;
   position: relative;
 }
 
@@ -191,7 +191,7 @@ body {
   }
   .swiper-slide {
     width: 94%;
-    height: 800px;
+    height: 70vh; /* Ajustado para mantener proporción */
     margin-top: 10px;
   }
 
@@ -201,7 +201,7 @@ body {
 
   .autor-img {
     height: 130px;
-    width: 108px;
+    width: auto; /* Cambiado a auto para mantener proporción */
     margin: 20px 0;
     object-fit: cover;
   }
