--- a/src/components/AutorSlider/styles.css
+++ b/src/components/AutorSlider/styles.css
@@ -1,11 +1,10 @@
-html,
+/* html,
 body {
-  font-family: "Roboto Slab", "Merriweather", "Libre Baskerville", "Lora",
-    "Playfair Display", serif;
+  font-family: 'Roboto Slab','Merriweather', 'Libre Baskerville', 'Lora', 'Playfair Display', serif;
   height: 100%;
   margin: 0;
   padding: 0;
-}
+} */
 
 body {
   font-size: 14px;
@@ -14,12 +13,12 @@ body {
 
 .slider {
   width: 100%;
-  height: 880px; /* Altura máxima establecida */
+  height: 100vh;
 }
 
 .main-container {
   overflow: hidden;
-  /* height: 800px; */
+  height: 95vh;
   background-color: #f5f5f5;
   background-image: url("../../assets/fondo.png");
   background-size: cover;
@@ -31,17 +30,16 @@ body {
   width: 100%;
   padding: 10% 0 5% 0;
 }
-
 .swiper-wrapper {
   margin: 10px auto;
 }
-
 .swiper-slide {
   width: 80%;
-  height: 80vh; /* Ajustado para mantener proporción */
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 1.3);
+  height: 92vh;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
   text-align: center;
   margin: 0 auto;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 1.3);
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.9);
   transition: transform 0.3s ease-in-out;
@@ -49,16 +47,16 @@ body {
 
 .slide-content {
   padding: 5px;
-  height: 800px;
+  height: 100%;
+
   position: relative;
 }
-
 .slide-content .chart-container {
   position: absolute;
   bottom: 0;
   left: 0;
 }
-
+/* detalles autor */
 .author-details {
   text-align: left;
 }
@@ -74,7 +72,6 @@ body {
   font-weight: bold;
   text-align: center;
 }
-
 .academic-degrees h5 {
   font-size: 0.6rem;
   padding: 7px;
@@ -111,12 +108,10 @@ body {
   color: #007bff;
   font-weight: bold;
 }
-
 .detalles-autor .documentos h1 {
   font-size: 2rem;
   font-weight: bold;
 }
-
 .detalles-autor p {
   margin: 0;
   color: #777;
@@ -140,6 +135,7 @@ body {
   margin-top: 50px;
 }
 
+/********* footer ********/
 .footer {
   background: #ffffff;
   padding: 18px 0;
@@ -152,6 +148,17 @@ body {
 .footer .container {
   width: 100%;
   margin: 0 auto;
+}
+
+.footer .row {
+}
+
+.footer .logo-uch,
+.footer .logo-laboratorio .col {
+}
+
+.footer .logo-uch img,
+.footer .logo-laboratorio img {
 }
 
 .footer .logo-uch {
@@ -186,12 +193,16 @@ body {
   justify-content: center;
 }
 
-@media (max-width: 760px) {
-  .swiper-wrapper {
+@media (max-height: 880px) {
+  .slider {
+    height: 836px;
+  }
+  .main-container {
+    height: 836px;
   }
   .swiper-slide {
     width: 94%;
-    height: 70vh; /* Ajustado para mantener proporción */
+    height: 800px;
     margin-top: 10px;
   }
 
